--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="refresh">Refresh</string>
     <string name="recipe_image">Recipe Image</string>
     <string name="bar">Bar</string>
+    <string name="ingredients">Ingredients</string>
 </resources>
