--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="recipe_image">Recipe Image</string>
     <string name="bar">Bar</string>
     <string name="ingredients">Ingredients</string>
+    <string name="instructions">Instructions</string>
 </resources>
